--- a/package.json
+++ b/package.json
@@ -2,14 +2,39 @@
   "name": "kritifront",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/home",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "axios": "^0.24.0",
+    "i": "^0.3.7",
+    "material-table": "^1.69.3",
+    "material-ui-dropzone": "^3.5.0",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-resizer": "^1.3.0",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.6",
+    "react-render-html": "^0.6.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "react-slick": "^0.28.1",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.3.0",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12",
+    "web-vitals": "^2.1.2",
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
